test/errors/error19.base
This expression has type 'int' but 'real' was expected
fun foo () {
   val x = [1.0, 1];
                 ^
